# industrial_core

./: .gitlab-ci.yml  .travis.yml  Dockerfile  docker-compose.yml
industrial_msgs/: CMakeLists.txt  package.xml
industrial_trajectory_filters/: CMakeLists.txt
industrial_utils/: CMakeLists.txt  package.xml
simple_message/: CMakeLists.txt  package.xml
