<package format="3">
  <name>industrial_msgs</name>
  <version>2.0.0</version>
  <description>
	The industrial message package containes industrial specific messages 
	definitions. This package is part of the ROS-Industrial program.
  </description>
  <maintainer email="shaun.edwards@plusonerobotics.com">Shaun Edwards</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/industrial_msg</url>
  <author>Shaun M. Edwards</author>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
