<package format="2">
  <name>industrial_utils</name>
  <version>2.0.0</version>
  <description>Industrial utils is a library package that captures common funcitonality for the ROS-Industrial distribution.</description>

  <maintainer email="shaun.edwards@plusonerobotics.com">Shaun Edwards</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/industrial_utils</url>
  <author>Shaun M. Edwards</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <test_depend>rosunit</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
