<package format="3">
  <name>simple_message</name>
  <version>2.0.0</version>
  <description>
	simple_message defines a simple messaging connection and protocol for communicating 
	with an industrial robot controller.  Additional handler and manager classes are 
	included for handling connection limited systems.  This package is part of the ROS-Industrial 
	program.
  </description>
  <maintainer email="shaun.edwards@plusonerobotics.com">Shaun Edwards</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/simple_message</url>
  <author>Shaun Edwards</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>roscpp</depend> 
  <depend>industrial_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
